[maven-release-plugin] prepare release confluence2md-2.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <!-- parent POM to Deploy Snapshots and Stage Releases with Maven on SonaType OSS Repos -->
     <parent>
@@ -9,7 +8,7 @@
     </parent>
     <groupId>de.viaboxx.markdown</groupId>
     <artifactId>confluence2md</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0</version>
     <packaging>jar</packaging>
 
     <name>Confluence2MD</name>
@@ -36,7 +35,7 @@
         <connection>scm:git:git@bitbucket.org:viaboxx/markdown-documentation.git</connection>
         <url>https://git.viaboxxsystems.de/gitweb/?p=viaboxx/markdown-documentation.git;a=summary</url>
         <developerConnection>scm:git:git@bitbucket.org:viaboxx/markdown-documentation.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>confluence2md-2.0</tag>
     </scm>
     <developers>
         <developer>
@@ -170,8 +169,7 @@
                 <version>2.3</version>
                 <configuration>
                     <transformers>
-                        <transformer
-                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <mainClass>de.viaboxx.markdown.Main</mainClass>
                         </transformer>
                     </transformers>
