--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <groupId>de.viaboxx.markdown</groupId>
     <artifactId>confluence2md</artifactId>
-    <version>2.1</version>
+    <version>2.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Confluence2MD</name>
@@ -35,7 +35,7 @@
         <connection>scm:git:https://github.com/viaboxxsystems/confluence2md.git</connection>
         <url>https://github.com/viaboxxsystems/confluence2md.git;a=summary</url>
         <developerConnection>scm:git:https://github.com/viaboxxsystems/confluence2md.git</developerConnection>
-        <tag>confluence2md-2.1</tag>
+        <tag>HEAD</tag>
     </scm>
     <developers>
         <developer>
